--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
-body{
-    background-color: black;
-    color: #F6F6F6;
+body {
+    background-color: #FF5733; /* Laranja */
+    color: #00FF00; /* Verde */
+}
+strong {
+    color: #22D4FD;
+    border: 1px solid #22D4FD;
+    padding: 10px;
 }
 
-strong{
-    color: #22D4FD;
+h1 {
+    color: #E64947;
+}
+
+p {
+    color: #5942EB;
 }
