--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body {
 
 .apresention{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    width: 100%;
+    margin: 8%;
 }
