--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 body {
     height: 100vh;
     background-color: #000000;
@@ -29,8 +31,10 @@ body {
 
 .titulo{
     font-size: 36px;
+    font-family: "Krona One", sans-serif;
 }
 
 .texto{
     font-size:24px;
+    font-family: "Montserrat", sans-serif;
 }
