--- a/styles.css
+++ b/styles.css
@@ -38,3 +38,8 @@ body {
     font-size:24px;
     font-family: "Montserrat", sans-serif;
 }
+
+.links{
+    display: flex;
+    justify-content: space-between;
+}
